--- a/inventory_management_system/templates/base.html
+++ b/inventory_management_system/templates/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,5 +35,9 @@
         {% endblock %}
     </div>
 
+    {% block extra_js %}{% endblock %}
+    <script src="{% static 'js/session_timeout.js' %}"></script>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
