changed the isolation of register functions

--- a/inventory_management_system/inventory/templates/inventory/admin_dashboard.html
+++ b/inventory_management_system/inventory/templates/inventory/admin_dashboard.html
@@ -28,7 +28,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'inventory:manage_stock_by_register' %}" class="nav-link">
+                    <a href="{% url 'register_management:manage_stock_by_register' %}" class="nav-link">
                         <i class="fas fa-book me-2"></i> Manage Stock by Register
                     </a>
                 </li>
