--- a/inventory_management_system/register_management/templates/register_management/add_register_item.html
+++ b/inventory_management_system/register_management/templates/register_management/add_register_item.html
@@ -4,7 +4,7 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="text-primary mb-0">Add New Item to {{ register_name }}</h2>
-        <a href="{% url 'inventory:register_inventory_list' register_name %}" class="btn btn-secondary">
+        <a href="{% url 'register_management:register_inventory_list' register_name %}" class="btn btn-secondary">
             <i class="fas fa-arrow-left me-2"></i>Back to Register
         </a>
     </div>
