stock management features isolation

--- a/inventory_management_system/inventory/templates/inventory/admin_dashboard.html
+++ b/inventory_management_system/inventory/templates/inventory/admin_dashboard.html
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'inventory:cdsr_allocation_list' %}" class="nav-link">
+                    <a href="{% url 'stock_management:cdsr_allocation_list' %}" class="nav-link">
                         <i class="fas fa-boxes me-2"></i> Allocate Stock
                     </a>
                 </li>
