--- a/inventory_management_system/stock_management/templates/stock_management/allocate_form.html
+++ b/inventory_management_system/stock_management/templates/stock_management/allocate_form.html
@@ -170,7 +170,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-success" id="submitBtn">Allocate</button>
-                <a href="{% url 'inventory:cdsr_allocation_list' %}" class="btn btn-secondary">Cancel</a>
+                <a href="{% url 'stock_management:cdsr_allocation_list' %}" class="btn btn-secondary">Cancel</a>
             </form>
         </div>
     </div>
