--- a/inventory_management_system/stock_management/templates/stock_management/deallocate_form.html
+++ b/inventory_management_system/stock_management/templates/stock_management/deallocate_form.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-danger" id="submitBtn">Deallocate Selected</button>
-                <a href="{% url 'inventory:cdsr_allocation_list' %}" class="btn btn-secondary">Cancel</a>
+                <a href="{% url 'stock_management:cdsr_allocation_list' %}" class="btn btn-secondary">Cancel</a>
             </div>
         </div>
     </form>
