--- a/inventory_management_system/inventory/templates/inventory/department_dashboard.html
+++ b/inventory_management_system/inventory/templates/inventory/department_dashboard.html
@@ -56,7 +56,7 @@
                 </span>
                 <div>
                     {% if user.is_authenticated %}
-                        <a href="{% url 'accounts:logout' %}" class="btn btn-danger">Logout</a>
+                        <button onclick="logout()" class="btn btn-danger">Logout</button>
                     {% else %}
                         <a href="{% url 'accounts:login' %}" class="btn btn-success">Login</a>
                     {% endif %}
