--- a/inventory_management_system/accounts/templates/accounts/logout.html
+++ b/inventory_management_system/accounts/templates/accounts/logout.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+{% csrf_token %}
 <h2>You have been logged out.</h2>
 <a href="{% url 'accounts:login' %}">Login again</a>
 {% endblock %}
