--- a/inventory_management_system/register_management/templates/register_management/edit_register_item.html
+++ b/inventory_management_system/register_management/templates/register_management/edit_register_item.html
@@ -9,7 +9,7 @@
             <p class="text-muted">Update item details and manage allocations</p>
         </div>
         <div>
-            <a href="{% url 'register_management:register_inventory_list' %}" class="btn btn-outline-secondary">
+            <a href="{% url 'register_management:register_inventory_list' register_name %}" class="btn btn-outline-secondary">
                 <i class="fas fa-arrow-left"></i> Back to Inventory
             </a>
         </div>
